feat: update user info (RGPD)
